--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello World!</title>
+    <title>Notifications Sample</title>
 </head>
 <body>
-<h1>Hello World!</h1>
-We are using io.js
-<script>document.write(process.version)</script>
-and Electron
-<script>document.write(process.versions['electron'])</script>
-.
+<h1>Notifications Sample</h1>
+<p>
+    This sample demonstrates the use of the Notifications API. Use buttons below to create notifications.
+</p>
+<div class="sample">
+    <p>Basic notification: default icon, title, and message.</p>
+    <button id="basic">Basic Notification</button>
+</div>
+<script src="notify.js"></script>
 </body>
 </html>
